[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamgrid"
version = "1.0.0"
description = "Ultra-fast multi-stream video display"
authors = [
    {name = "Muhammad Rizwan Munawar"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["video", "streaming", "display", "multi-stream", "opencv", "real-time", "python"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/RizwanMunawar/streamgrid"
Repository = "https://github.com/RizwanMunawar/streamgrid"
Issues = "https://github.com/RizwanMunawar/streamgrid/issues"
Documentation = "https://github.com/RizwanMunawar/streamgrid#readme"

[project.scripts]
streamgrid = "streamgrid.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamgrid*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"